# TramitUp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  MEJORAS_IMPLEMENTADAS.md  Makefile  README.md  STRIPE_SETUP.md  docker-compose.yml  fix-seo-templates.ps1  package-lock.json  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt  test_None
backend/app/: main.py
backend/app/ai/: llm_client.py
backend/app/ai/bots/: __init__.py  base_bot.py  calculator_bot.py  claims_bot.py  contract_bot.py  deadline_bot.py  document_bot.py  selector.py
backend/app/ai/chains/: chat_chain.py  classify_chain.py  deadline_extract_chain.py  document_chain.py  document_extract_chain.py  (+1 more)
backend/app/config/: legal_calendar.py  portals.py  tramite_templates.py  workflow_templates.py
backend/app/core/: auth.py  cache.py  config.py  exceptions.py  logging.py  monitoring.py  rate_limit.py  supabase_client.py
backend/app/jobs/: send_alerts.py
backend/app/schemas/: alerts.py  chat.py  document.py  me.py
backend/app/services/: alerts_service.py  case_service.py  chat_service.py  compensation_calculator.py  contract_analysis_service.py  dashboard_service.py  document_analysis_service.py  document_pipeline_service.py  document_service.py  email_service.py  intelligent_template_service.py  legal_entity_extractor.py  personalization_service.py  proactive_suggestions_service.py  recommendations_service.py  smart_reminders_service.py  stripe_service.py  subscription_service.py  tramite_wizard_service.py
backend/scripts/: seed_rag.py  update_rag_knowledge.py
backend/supabase/migrations/: 20240226000001_init_schema.sql  20240226000002_profile_trigger.sql  20240226000003_match_embeddings.sql  20240226100000_chat_schema_updates.sql  20240227000001_onboarding_profile.sql  20240228000001_generated_documents.sql  20240229000001_alerts.sql  20240305000004_add_legal_entities_to_attachments.sql  20240305000005_create_suggestion_interactions.sql  20240306000001_fix_conversation_attachments.sql  20240320000001_cases.sql  20240401000001_workflow_steps.sql
backend/tests/: conftest.py  test_auth.py  test_chat_endpoint.py  test_health.py
frontend/: .env.example  (+11 more)
(+235 files in other folders)
